# tokrate

./: .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  TokRate.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: guide.md  plan-v2.md  plan.md
leaderboard-worker/: package.json  tsconfig.json  wrangler.toml
leaderboard-worker/src/: index.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  proxy.rs
src/api/: client.ts  discovery.ts  leaderboard.ts
src/components/: ComparisonChart.vue  ConnectionStatus.vue  ContextBenchmark.vue  DeltaCard.vue  MetricsBar.vue  PerformanceTimeline.vue  PublishDialog.vue  QuantizationScanner.vue  Sidebar.vue  SpeedChart.vue  ToastContainer.vue
src/data/: templates.ts  tools.ts
src/router/: index.ts
src/stores/: config.ts  history.ts  proxy.ts  suites.ts  templates.ts  toast.ts
src/styles/: main.css  markdown.css
src/types/: index.ts
src/utils/: markdown.ts
src/views/: BenchmarksView.vue  CompareView.vue  HistoryView.vue  LeaderboardView.vue  PlaygroundView.vue  SettingsView.vue
