[package]
name = "tokrate"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokrate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"

[profile.release]
strip = true
lto = true
codegen-units = 1
